modification chemin css et js

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- feuille d'icones (box icons) -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- feuille de style -->
-    <link rel="stylesheet" href="_style/style.css">
-    <link rel="stylesheet" href="_style/responsive.css">
+    <link rel="stylesheet" href="../_style/style.css">
+    <link rel="stylesheet" href="../_style/responsive.css">
 </head>
 
 <body>
@@ -192,6 +192,6 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
     <!-- fichier js -->
-    <script src="_script/script.js"></script>
+    <script src="../_script/script.js"></script>
 </body>
 </html>
