--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Responsive</title>
      <!-- feuille de style -->
-    <link rel="stylesheet" href="_style/style.css">
-    <link rel="stylesheet" href="_style/responsive.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <!-- feuille d'icones (box icons) -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
    
@@ -191,6 +191,6 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
     <!-- fichier js -->
-    <script src="_script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
