--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
             <div class="accueil-img">
-                <img src="_images/home.png" alt="">
+                <img src="home.png" alt="">
             </div>
         
     </section>
@@ -54,7 +54,7 @@
 
     <section class="apropos" id="apropos">
         <div class="apropos-img">
-            <img src="_images/about.png" alt="">
+            <img src="about.png" alt="">
         </div>
         <div class="apropos-contenu">
             <h2 class="heading">A propos de <span> Moi</span></h2>
@@ -98,7 +98,7 @@
         <div class="portfolio-container">
 
             <div class="portfolio-box">
-                <img src="_images/portfolio1.jpg" alt="">
+                <img src="portfolio1.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, eligendi?</p>
@@ -107,7 +107,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="_images/portfolio2.jpg" alt="">
+                <img src="portfolio2.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, eligendi?</p>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="_images/portfolio3.jpg" alt="">
+                <img src="portfolio3.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, eligendi?</p>
@@ -125,7 +125,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="_images/portfolio4.jpg" alt="">
+                <img src="portfolio4.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, eligendi?</p>
@@ -134,7 +134,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="_images/portfolio5.jpg" alt="">
+                <img src="portfolio5.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, eligendi?</p>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="_images/portfolio6.jpg" alt="">
+                <img src="portfolio6.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, eligendi?</p>
